# ternary-compress

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: lib.rs
