[package]
name = "ternary-compress"
version = "0.1.0"
edition = "2021"
description = "Balanced ternary compression for constrained devices — {-1, 0, +1} encoding"
license = "MIT"
keywords = ["ternary", "compression", "embedded", "encoding"]
categories = ["algorithms", "embedded", "data-structures"]
repository = "https://github.com/SuperInstance/ternary-compress"

[dependencies]
